# ncnn

./: .gitignore  CMakeLists.txt  build.sh
ctpn-examples/: CMakeLists.txt  connect.h  ctpn_example.cpp  ctpn_ncnn.cpp  ctpn_ncnn.hpp  nms.h
ctpn-examples/jni/: Android.mk  Application.mk  connect.h  ctpn_jni.cpp  ctpn_ncnn.cpp  ctpn_ncnn.hpp  nms.h
ctpn-examples/model/: deploy_shufflenetv2_wo_lstm.prototxt
hed-examples/: CMakeLists.txt  deploy.pt  hed_example.cpp  hed_ncnn.cpp  hed_ncnn.hpp  hed_ncnn_jni.cpp  resnet-20000.param  timer.hpp  vgg16-30000.param
hed-examples/jni/: Android.mk  hed_ncnn.hpp
ncnn-android-lib/jni/: hed_ncnn.cpp  hed_ncnn_jni.cpp
src/layer/: batchnorm.cpp
src/layer/arm/: batchnorm_arm.cpp
tools/caffe/: CMakeLists.txt
